@@ -1850,13 +1850,16 @@ slayrace
 ========
 Kills any unit of a given race.
 
-With no argument, lists the available races.
+With no argument, lists the available races and count eligible targets.
 
 With the special argument ``him``, targets only the selected creature.
 
+With the special argument ``undead``, targets all undeads on the map,
+regardless of their race.
+
 Any non-dead non-caged unit of the specified race gets its ``blood_count``
 set to 0, which means immediate death at the next game tick. For creatures
-such as vampires, also set animal.vanish_countdown to 2.
+such as vampires, it also sets animal.vanish_countdown to 2.
 
 An alternate mode is selected by adding a 2nd argument to the command,
 ``magma``. In this case, a column of 7/7 magma is generated on top of the
