@@ -1,14 +1,17 @@
 # slay all creatures of a given race
 
 # race = name of the race to eradicate, use 'him' to target only the selected creature
+# use 'undead' to target all undeads
 race = $script_args[0]
+
 # if the 2nd parameter is 'magma', magma rain for the targets instead of instant death
 magma = ($script_args[1] == 'magma')
 
 checkunit = lambda { |u|
-	u.body.blood_count != 0 and
+	(u.body.blood_count != 0 or u.body.blood_max == 0) and
 	not u.flags1.dead and
-	not u.flags1.caged and
+	not u.flags1.caged and not u.flags1.chained and
+	#not u.flags1.hidden_in_ambush and
 	not df.map_designation_at(u).hidden
 }
 
@@ -26,7 +29,8 @@ slayit = lambda { |u|
 				df.onupdate_unregister(ouh)
 			else
 				x, y, z = u.pos.x, u.pos.y, u.pos.z
-				z += 1 while tile = df.map_tile_at(x, y, z+1) and tile.shape_passableflow
+				z += 1 while tile = df.map_tile_at(x, y, z+1) and
+					tile.shape_passableflow and tile.shape_passablelow
 				df.map_tile_at(x, y, z).spawn_magma(7)
 			end
 		}
@@ -36,17 +40,41 @@ slayit = lambda { |u|
 all_races = Hash.new(0)
 
 df.world.units.active.map { |u|
-	all_races[u.race_tg.creature_id] += 1 if checkunit[u]
+	if checkunit[u]
+		if (u.enemy.undead or
+		    (u.curse.add_tags1.OPPOSED_TO_LIFE and not
+		     u.curse.del_tags1.OPPOSED_TO_LIFE))
+			all_races['Undead'] += 1
+		else
+			all_races[u.race_tg.creature_id] += 1
+		end
+	end
 }
 
-if !race
+case race
+when nil
 	all_races.sort_by { |race, cnt| [cnt, race] }.each{ |race, cnt| puts " #{race} #{cnt}" }
-elsif race == 'him'
+
+when 'him'
 	if him = df.unit_find
 		slayit[him]
 	else
-		puts "Choose target"
+		puts "Select a target ingame"
 	end
+
+when /^undead/i
+	count = 0
+	df.world.units.active.each { |u|
+		if (u.enemy.undead or
+		    (u.curse.add_tags1.OPPOSED_TO_LIFE and not
+		     u.curse.del_tags1.OPPOSED_TO_LIFE)) and
+		   checkunit[u]
+			slayit[u]
+			count += 1
+		end
+	}
+	puts "slain #{count} undeads"
+
 else
 	raw_race = df.match_rawname(race, all_races.keys)
 	raise 'invalid race' if not raw_race
@@ -60,6 +88,6 @@ else
 			count += 1
 		end
 	}
-
 	puts "slain #{count} #{raw_race}"
+
 end
