@@ -13,6 +13,7 @@ DFHack future
     - superdwarf: work in adventure mode too
     - tweak stable-cursor: carries cursor location from/to Build menu.
     - deathcause: allow selection from the unitlist screen
+    - slayrace: allow targetting undeads
   New tweaks:
     - tweak military-training: speed up melee squad training up to 10x (normally 3-5x).
   New scripts:
